--- a/style.css
+++ b/style.css
@@ -1,35 +1,96 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 /*===== VARIABLES CSS =====*/
+:root{
+    --header-height: 3rem;
+
   
   /*===== Font weight =====*/
+  --font-medium: 500;
+  --font-semi-bold:600;
+  --font-bold: 700;
   
 
-  /*===== Colores =====*/
-  
+  /*===== Colors =====*/
+  --dark-color: #141414;
+  --dark-color-ligh: #8A8A8A;
+  --dark-color-lighten: #f1f1f1;
+  --white-color: #ffffff;
 
+  
   /*===== Font and typography =====*/
+  --body-font: 'Poppins', sans-serif;
+  --big-font-size: 1.25rem;
+  --bigger-font-size: 1.5rem;
+  --biggest-font-size: 2rem;
+  --h2-font-size: 1.25rem;
+  --normal-font-size: .938rem;
+  --smaller-font-size: .813rem;
   
 
   /*===== Margenes =====*/
-  
+  --mb-1: .5rem;
+  --mb-2: 1rem;
+  --mb-3: 1.5rem;
+  --mb-4: 2rem;
+  --mb-5: 2.5rem;
+  --mb-6: 3rem;
 
   /*===== z index =====*/
-  
+  --z-fixed:100;
   
   /*===== Rotate img =====*/
-  
+  --rotate-img: rotate(-30deg);
+}
+@media screen and (min-width: 768px){
+    :root{
+        --big-font-size: 1.5rem;
+        --bigger-font-size: 2rem;
+        --biggest-font-size: 3rem;
+        --normal-font-size: 1rem;
+        --smaller-font-size: .875rem; 
+    }
+}
+
 
 /*===== BASE =====*/
+*,::before,::after{
+    box-sizing: border-box;
+}
 
+html{
+    scroll-behavior: smooth;
+}
 
-/*===== CLASS CSS ===== */
+body{
+    margin: var(--header-height) 0 0 0;
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+    color: var(--dark-color);
+    line-height: 1.6;
+}
 
+h1,h2,h3,p,ul{
+    margin:0;
+}
 
-/*===== LAYOUT =====*/
+ul{
+    padding:0;
+    list-style:none;
+}
 
+a{
+    text-decoration: none;
+    color: var(--dark-color);
+}
 
-/*===== NAV =====*/
+img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 
 
 /*Show menu*/
