--- a/style.css
+++ b/style.css
@@ -91,7 +91,53 @@ img{
     display: block;
 }
 
+/*===== Class of CSS =====*/
+.section{
+    padding: 5rem 0 2rem;
+}
 
+.section-title{
+    position: relative;
+    font-size: var(--big-font-size);
+    margin-bottom: var(--mb-4);
+    text-align: center;
+    letter-spacing: .1rem;
+}
+
+.section-title::after{
+    content: '';
+    position: absolute;
+    width: 56px;
+    height: .18rem;
+    top: -1rem;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: var(--dark-color);
+}
+
+/*===== LAYOUT =====*/
+.bd-grid{
+    max-width: 1024px;
+    display: grid;
+    grid-template-columns: 100%;
+    column-gap: 2rem;
+    width: calc(100% - 2rem);
+    margin-left: var(--mb-2);
+    margin-right: var(--mb-2);
+}
+
+.l-header{
+    width:100%;
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: var(--z-fixed);
+    background-color: var(--dark-color-lighten);
+}
+
+
+/*===== NAV =====*/
 
 /*Show menu*/
 
@@ -109,6 +155,9 @@ img{
 
 
 /*===== FEATURED =====*/
+
+
+/*===== SHOP.HTML =====*/
 
 
 /*===== COLLECTION =====*/
