--- a/style.css
+++ b/style.css
@@ -149,6 +149,28 @@ img{
 
 
 /*===== HOME =====*/
+.home{
+    background-color: var(--dark-color-lighten);
+    overflow:hidden;
+}
+
+.home_container{
+    height: calc(100vh - var(--header-height));
+}
+
+.home_sneaker{
+    position:relative;
+    display: flex;
+    justify-content: center;
+    align-self:center;
+}
+
+.home_shape{
+    width:220px;
+    height:220px;
+    background-color: var(--dark-color);
+    border-radius: 50%;
+}
 
 
 /*BUTTONS*/
