Added the rest of the home style

--- a/style.css
+++ b/style.css
@@ -223,6 +223,31 @@ img{
     border-radius: 50%;
 }
 
+.home_img{
+    position:absolute;
+    top:1.5rem;
+    max-width: initial;
+    width:275px;
+    transform: var(--rotate-img);
+}
+
+.home_new{
+    display:block;
+    font-size:var(--smaller-font-size);
+    font-weight:var(--font-semi-bold);
+    margin-bottom: var(--mb-2);
+}
+
+.home_title{
+    font-size: var(--bigger-font-size);
+    margin-bottom: var(--mb-1);
+}
+
+.home_description{
+    margin-bottom:var(--mb-6);
+}
+
+
 
 /*BUTTONS*/
 
