--- a/style.css
+++ b/style.css
@@ -283,6 +283,59 @@ img{
 }
 
 /*===== FEATURED =====*/
+.featured_container{
+    row-gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.sneaker{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    background-color: var(--dark-color-lighten);
+    border-radius: .5rem;
+    transition: 0.3s;
+}
+
+.sneaker_sale{
+    position: absolute;
+    left: .5rem;
+    background-color: var(--dark-color);
+    color:var(--white-color);
+    padding: .25rem .5rem;
+    border-radius: .25rem;
+    font-size: var(--h2-font-size);
+    transform: rotate(-90deg);
+    letter-spacing: .1rem;
+}
+
+.sneaker_img{
+    width:220px;
+    margin-top:var(--mb-3);
+    margin-bottom: var(--mb-6);
+    transform: var(--rotate-img);
+    filter: drop-shadow(0 12px 8px rgba(0,0,0,.2));
+}
+
+.sneaker_name, .sneaker_preci{
+    font-size: var(--h2-font-size);
+    letter-spacing: .1rem;
+    font-weight: var(--font-bold);
+}
+
+.sneaker_name{
+    margin-bottom: var(--mb-1);
+}
+
+.sneaker_perci{
+    margin-bottom: var(--mb-4);
+}
+
+.sneaker:hover{
+    transform: translateY(-.5rem);
+}
 
 
 /*===== SHOP.HTML =====*/
