--- a/style.css
+++ b/style.css
@@ -342,7 +342,44 @@ img{
 
 
 /*===== COLLECTION =====*/
+.collection_container{
+    row-gap: 2rem;
+    justify-content: center;
+}
 
+.collection_card{
+    position: relative;
+    display: flex;
+    height: 328px;
+    background-color: var(--dark-color-lighten);
+    padding: 2rem;
+    border-radius: .5rem;
+    transition: .3s;
+}
+
+.collection_data{
+    align-self: flex-end;
+}
+
+.collection_img{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 230px;
+}
+
+.collection_name{
+    font-size:var(--bigger-font-size);
+    margin-bottom: .25rem;
+}
+
+.collection_description{
+    margin-bottom:var(--mb-2);
+}
+
+.collection_card:hover{
+    transform: translateY(-.5rem);
+}
 
 /*===== WOMEN SNEAKERS =====*/
 
