Added the Offer Style

--- a/style.css
+++ b/style.css
@@ -391,6 +391,31 @@ img{
 
 
 /*===== OFFER =====*/
+.offer_container{
+    grid-template-columns: 55% 45%;
+    column-gap: 0;
+    background-color: var(--dark-color-lighten);
+    border-radius: .5rem;
+    justify-content: center;
+}
+
+.offer_data{
+    padding: 4rem 0 4rem 1.5rem;
+}
+
+.offer_title{
+    font-size: var(--biggest-font-size);
+    margin-bottom: .25rem;
+}
+
+.offer_description{
+    margin-bottom: var(--mb-3);
+}
+
+.offer_img{
+    width: 153px;
+}
+
 
 
 /*===== NEW COLLECTION  =====*/
