Added the style to all products

--- a/style.css
+++ b/style.css
@@ -339,6 +339,19 @@ img{
 
 
 /*===== SHOP.HTML =====*/
+.sneaker_pages{
+    margin-top: var(--mb-6);
+}
+
+.sneaker_pag{
+    padding: .5rem 1rem;
+    border: 1px solid var(--dark-color);
+}
+
+.sneaker_pag:hover{
+    background-color: var(--dark-color);
+    color: var(--white-color);
+}
 
 
 /*===== COLLECTION =====*/
