--- a/style.css
+++ b/style.css
@@ -433,6 +433,69 @@ img{
 
 /*===== NEW COLLECTION  =====*/
 
+.new_container{
+    row-gap: 2rem;
+}
+
+.new_mens{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--dark-color-lighten);
+    border-radius: .5rem;
+    padding: 2rem;
+}
+
+.new_mens-img{
+    width: 276px;
+    margin-bottom: var(--mb-3);
+}
+
+.new_title{
+    font-size: var(--bigger-font-size);
+    margin-bottom: .25rem;
+}
+
+.new_preci{
+    display: block;
+    margin-bottom: var(--mb-3);
+}
+
+
+.new__sneaker{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.new__sneaker-card{
+    position: relative;
+    padding: 3.5rem 1.5rem;
+    background-color: dark var(--dark-color-lighten);
+    border-radius: .5rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.new__sneaker-img{
+    width: 220px;
+}
+
+
+.new__sneaker-overlay{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(138,138,138,.1);
+    transition: .3s;
+}
+
 
 /*===== NEWSLETTER =====*/
 
