Added the style to the newsletter

--- a/style.css
+++ b/style.css
@@ -498,6 +498,44 @@ img{
 
 
 /*===== NEWSLETTER =====*/
+.newsletter_container{
+    background-color: var(--dark-color);
+    color: var(--white-color);
+    padding: 2rem .5rem;
+    border-radius: .5rem;
+    text-align: center;
+}
+
+.newsletter_title{
+    font-size: var(--bigger-font-size);
+    margin-bottom: var(--mb-2);
+}
+
+.newsletter_description{
+    margin-bottom: var(--mb-5);
+}
+
+.newsletter_subscribe{
+    display: flex;
+    column-gap: .5rem;
+    background-color: var(--white-color);
+    padding: .5rem;
+    border-radius: .5rem;
+}
+
+.newsletter_input{
+    outline: none;
+    border: none;
+    width: 90%;
+    font-size: var(--normal-font-size);
+}
+
+.newsletter_input::placeholder{
+    color: var(--dark-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    font-weight: font var(--font-semi-bold);
+}
 
 
 /*===== FOOTER =====*/
